Code: many problems fixed, first of all, "double scroll": * wrong hint display caused broken flex layout; in a big table, there was a scroll inside main and inside body at the same time, space past footer * missing summary caused exception * removed dirt from CSS * removed redundant definitionSet elements

--- a/code/ui/style.css
+++ b/code/ui/style.css
@@ -28,7 +28,6 @@ td { vertical-align: top; }
 th { background-color: lightgray; }
 td, th { white-space: nowrap; }
 textarea { padding: 1em; padding-top: 0.2em; padding-bottom: 0.2em; }
-color: gray; /* se font-style:  and focus: keep .select in sync with definitionSet.CSS: */
 table:not(:focus) td:not(.select) { background-color: hsl(0, 0%, 90%); }
 td:first-child, td:last-child { background-color: lightgray; text-align: right; }
 td.select { background-color: steelBlue; color: white; }
